color correcting and aligning package images

--- a/src/apps/common/static/less/packages-b.less
+++ b/src/apps/common/static/less/packages-b.less
@@ -95,10 +95,18 @@
         }
     }
 }
+#copper-package-offer {
+    #offer-main-image {
+        position: absolute;
+        left: -125px;
+        z-index: -1;
+        top: -5px;
+    }
+}
 #bronze-package-offer {
     #offer-main-image {
         position: absolute;
-        left: -119px;
+        left: -131px;
         z-index: -1;
         top: -5px;
     }
@@ -106,7 +114,7 @@
 #silver-package-offer {
     #offer-main-image {
         position: absolute;
-        left: -112px;
+        left: -131px;
         z-index: -1;
         top: -5px;
     }
@@ -114,7 +122,7 @@
 #gold-package-offer {
     #offer-main-image {
         position: absolute;
-        left: -112px;
+        left: -145px;
         z-index: -1;
         top: -5px;
     }
@@ -122,7 +130,7 @@
 #platinum-package-offer {
     #offer-main-image {
         position: absolute;
-        left: -125px;
+        left: -127px;
         z-index: -1;
         top: -5px;
     }
